--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "jetifier": "^1.6.4",
+    "json-server": "^0.15.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.3",
